# hexagonal-flask-app/app/adapters/rest/flask_server/swagger_server/controllers/phyact_pred_controller.py
@@ -5,6 +5,7 @@ import logging
 sys.path.append('/home/kosala/git-rep/physical_activity_routine_creation_module/hexagonal-flask-app/')
 from app.domain.api.dtos.models import phyActData
 from app.adapters.db.mysql_adapter import MySQLAdapter
+from app.domain.spi.db_spi import NoDataFoundException
 from app.domain.services.physical_act_impl import PhysicalActImpl
 from swagger_server.models.get_physical_act_response_body201 import GetPhysicalActResponseBody201  # noqa: E501
 from swagger_server.models.physical_act_response_body400 import PhysicalActResponseBody400  # noqa: E501
@@ -12,7 +13,7 @@ from swagger_server.models.physical_act_response_body500 import PhysicalActRespo
 from swagger_server.models.predict_physical_act import PredictPhysicalAct  # noqa: E501
 from swagger_server.models.predict_physical_act_response_body201 import PredictPhysicalActResponseBody201  # noqa: E501
 from swagger_server import util
-USER_ID = "user_0001"
+USER_ID = "user_0001" # TODO: this needs to be taken from the JWT token
 
 logger = logging.getLogger(__name__)
 
@@ -37,6 +38,13 @@ def api_v1_physical_act_prediction_get(user_id):  # noqa: E501
             "status": "prediction success"
         }
         STATUS_CODE = 200
+    except NoDataFoundException as e:
+        logger.error(e)
+        output = {
+            "prediction": None,
+            "status": "no data found"
+        }
+        STATUS_CODE = 404
     except Exception as e:
         logger.error(e)
         output = {
@@ -46,7 +54,6 @@ def api_v1_physical_act_prediction_get(user_id):  # noqa: E501
         STATUS_CODE = 500
         
     return output, STATUS_CODE
-
 
 def api_v1_physical_act_prediction_post(body):  # noqa: E501
     """predict the physical activities
@@ -66,6 +73,40 @@ def api_v1_physical_act_prediction_post(body):  # noqa: E501
             data.uid = USER_ID
         
         activity_list = phyActService.predict_physical_activities(data)
+        
+        output = {
+            "prediction": activity_list,
+            "status": "prediction success"
+        }
+        STATUS_CODE = 201
+    except Exception as e:
+        logger.error(e)
+        output = {
+            "prediction": None,
+            "status": "prediction failed"
+        }
+        STATUS_CODE = 500
+    
+    return output, STATUS_CODE
+
+def api_v1_physical_act_routine_per_day_post(body):  # noqa: E501
+    """get the physical activities routine per day
+
+    Optional extended description in CommonMark or HTML. # noqa: E501
+
+    :param body: 
+    :type body: dict | bytes
+
+    :rtype: PredictPhysicalActResponseBody201
+    """
+    try:
+        if connexion.request.is_json:
+            data = phyActData(**connexion.request.get_json())
+                
+        if USER_ID is not None:
+            data.uid = USER_ID
+        
+        activity_list = phyActService.get_physical_activities_routine_per_day(data)
         
         output = {
             "prediction": activity_list,
